Adding Image Pull Secret to SA

--- a/charts/redis-ha/templates/redis-ha-serviceaccount.yaml
+++ b/charts/redis-ha/templates/redis-ha-serviceaccount.yaml
@@ -18,4 +18,7 @@ secrets:
 {{- if .Values.sentinel.auth }}
 - name: {{ default (printf "%s-sentinel" (include "redis-ha.fullname" .)) .Values.sentinel.existingSecret }}
 {{- end }}
+{{- if .Values.imagePullSecrets }}
+imagePullSecrets: {{ toYaml .Values.imagePullSecrets | nindent 0 }}
+{{- end }}
 {{- end }}
