Newer versions of haproxy expect LF on config last line

--- a/charts/redis-ha/templates/redis-ha-configmap.yaml
+++ b/charts/redis-ha/templates/redis-ha-configmap.yaml
@@ -21,7 +21,7 @@ data:
   init.sh: |
 {{- include "config-init.sh" . }}
 {{ if .Values.haproxy.enabled }}
-  haproxy.cfg: |-
+  haproxy.cfg: |
 {{- include "config-haproxy.cfg" . }}
 {{- end }}
   haproxy_init.sh: |
