Fixing CI Tests
Signed-off-by: Aaron Layfield <aaron.layfield@gmail.com>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,7 +21,7 @@ jobs:
     - name: Shellcheck
       uses: ludeeus/action-shellcheck@0.1.0
     - name: Install kind
-      uses: helm/kind-action@v1.0.0-alpha.3
+      uses: helm/kind-action@v1.0.0
       with:
         node_image: "kindest/node:${{ matrix.kubernetesVersion }}"
         config: .ci/kind-config.yaml
@@ -31,13 +31,13 @@ jobs:
         kubectl cluster-info
         kubectl get nodes -o wide
         kubectl get pods -n kube-system
-    - name: Run chart-testing (lint)
-      uses: helm/chart-testing-action@v1.0.0-alpha.3
+    - name: Setup chart-testing
+      uses: helm/chart-testing-action@v2.0.1
+    - name: Run chart-testing linting (lint)
+      run: ct lint
       with:
-        command: lint
         config: .ci/ct-config.yaml
     - name: Run chart-testing (install)
-      uses: helm/chart-testing-action@v1.0.0-alpha.3
+      uses: ct install
       with:
-        command: install
         config: .ci/ct-config.yaml
