Add updateStrategy choice for redis sts (#103)
Signed-off-by: Clément Schockaert <clement.schockaert@outlook.com>

--- a/charts/redis-ha/templates/redis-ha-statefulset.yaml
+++ b/charts/redis-ha/templates/redis-ha-statefulset.yaml
@@ -20,7 +20,7 @@ spec:
   replicas: {{ .Values.replicas }}
   podManagementPolicy: OrderedReady
   updateStrategy:
-    type: RollingUpdate
+    type: {{ .Values.redis.updateStrategy.type }}
   template:
     metadata:
       annotations:
