Add readiness probe to chart
Signed-off-by: Michael Michalski <michaelmartinmichalski@gmail.com>

--- a/charts/redis-ha/templates/redis-ha-statefulset.yaml
+++ b/charts/redis-ha/templates/redis-ha-statefulset.yaml
@@ -264,6 +264,17 @@ spec:
               - sh
               - -c
               - /health/redis_liveness.sh
+        readinessProbe:
+          initialDelaySeconds: {{ .Values.redis.readinessProbe.initialDelaySeconds }}
+          periodSeconds: {{ .Values.redis.readinessProbe.periodSeconds }}
+          timeoutSeconds: {{ .Values.redis.readinessProbe.timeoutSeconds }}
+          successThreshold: {{ .Values.redis.readinessProbe.successThreshold }}
+          failureThreshold: {{ .Values.redis.readinessProbe.failureThreshold }}
+          exec:
+            command:
+              - sh
+              - -c
+              - /health/redis_liveness.sh
         resources:
 {{ toYaml .Values.redis.resources | indent 10 }}
         ports:
@@ -274,7 +285,7 @@ spec:
         {{- if .Values.redis.tlsPort }}
         - name: redis-tls
           containerPort: {{ .Values.redis.tlsPort }}
-        {{- end }} 
+        {{- end }}
         volumeMounts:
         - mountPath: /data
           name: data
@@ -337,14 +348,14 @@ spec:
         {{- if .Values.sentinel.tlsPort }}
           - name: sentinel-tls
             containerPort: {{ .Values.sentinel.tlsPort }}
-        {{- end }}   
+        {{- end }}
         volumeMounts:
         - mountPath: /data
           name: data
         {{- if .Values.redis.tlsPort }}
         - mountPath: /tls-certs
           name: tls-certs
-        {{- end }} 
+        {{- end }}
         - mountPath: /health
           name: health
         lifecycle:
