--- a/charts/redis-ha/templates/redis-ha-psp.yaml
+++ b/charts/redis-ha/templates/redis-ha-psp.yaml
@@ -7,6 +7,12 @@ metadata:
 {{ include "labels.standard" . | indent 4 }}
 spec:
   allowPrivilegeEscalation: false
+{{- if .Values.securityContext.sysctls }}
+  allowedUnsafeSysctls:
+{{- range .Values.securityContext.sysctls }}
+    - {{ .name }}
+{{- end }}
+{{- end }}
   fsGroup:
     rule: 'MustRunAs'
     ranges:
