Change typo to readinessProbe
Signed-off-by: Michael Michalski <michaelmartinmichalski@gmail.com>

--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -285,7 +285,7 @@ sentinel:
     failureThreshold: 5
 
   # readiness probe parameters for sentinel container
-  readiness:
+  readinessProbe:
     initialDelaySeconds: 30
     periodSeconds: 15
     timeoutSeconds: 15
