--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -92,6 +92,8 @@ haproxy:
   service:
     type: ClusterIP
     loadBalancerIP:
+    # List of CIDR's allowed to connect to LoadBalancer
+    # loadBalancerSourceRanges: []
     annotations: {}
   serviceAccount:
     create: true
