--- a/charts/redis-ha/templates/redis-ha-secret.yaml
+++ b/charts/redis-ha/templates/redis-ha-secret.yaml
@@ -20,5 +20,8 @@ data:
 {{- if regexFind $regexRestoreS3 (toString .Values.restore.s3.source) }}
   AWS_SECRET_ACCESS_KEY: "{{ .Values.restore.s3.secret_key | b64enc }}"
   AWS_ACCESS_KEY_ID: "{{ .Values.restore.s3.access_key | b64enc }}"
+  {{- if .Values.restore.s3.region }}
+  AWS_REGION: "{{ .Values.restore.s3.region | b64enc }}"
+  {{- end }}
 {{- end }}
 {{- end }}
