--- a/charts/redis-ha/templates/redis-ha-statefulset.yaml
+++ b/charts/redis-ha/templates/redis-ha-statefulset.yaml
@@ -183,7 +183,7 @@ spec:
         args:
         - "-c"
         - "timeout -t {{ .Values.restore.timeout }} \
-             s3cmd get --force '{{ .Values.restore.s3.source }}' /data/dump.rdb_ \
+             s3cmd get {{ if .Values.restore.s3.region }}--region {{ .Values.restore.s3.region }} {{ end }}--force '{{ .Values.restore.s3.source }}' /data/dump.rdb_ \
            && test -s /data/dump.rdb_ \
            && if test -s /data/dump.rdb; \
               then cp -v /data/dump.rdb /data/dump.rdb_orig; fi \
