bug: quote namespace to allow names with only numbers
Signed-off-by: Gordon Franke <info@nevalon.de>

--- a/charts/redis-ha/templates/redis-ha-exporter-script-configmap.yaml
+++ b/charts/redis-ha/templates/redis-ha-exporter-script-configmap.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ template "redis-ha.fullname" . }}-exporter-script-configmap
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Release.Namespace | quote }}
   labels:
 {{ include "labels.standard" . | indent 4 }}
 data:
