--- a/charts/redis-ha/templates/redis-tls-secret.yaml
+++ b/charts/redis-ha/templates/redis-tls-secret.yaml
@@ -4,7 +4,7 @@ kind: Secret
 metadata:
   metadata:
   name: {{ template "redis-ha.fullname" . }}-tls-secret
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Release.Namespace | quote }}
   labels:
 {{ include "labels.standard" . | indent 4 }}
 type: Opaque
