--- a/charts/redis-ha/templates/redis-auth-secret.yaml
+++ b/charts/redis-ha/templates/redis-auth-secret.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ template "redis-ha.fullname" . }}
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Release.Namespace | quote }}
   labels:
 {{ include "labels.standard" . | indent 4 }}
 type: Opaque
