--- a/charts/redis-ha/templates/redis-ha-announce-service.yaml
+++ b/charts/redis-ha/templates/redis-ha-announce-service.yaml
@@ -8,7 +8,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ $fullName }}-announce-{{ $i }}
-  namespace: {{ $namespace }}
+  namespace: {{ $namespace | quote}}
   labels:
 {{ include "labels.standard" $root | indent 4 }}
   annotations:
