--- a/charts/redis-ha/templates/redis-ha-secret.yaml
+++ b/charts/redis-ha/templates/redis-ha-secret.yaml
@@ -6,7 +6,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ include "redis-ha.fullname" . }}-secret
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Release.Namespace | quote }}
   labels:
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
