--- a/charts/redis-ha/templates/redis-ha-service.yaml
+++ b/charts/redis-ha/templates/redis-ha-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ template "redis-ha.fullname" . }}
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Release.Namespace | quote }}
   labels:
 {{ include "labels.standard" . | indent 4 }}
 {{- if .Values.exporter.enabled }}
