--- a/charts/redis-ha/templates/redis-haproxy-serviceaccount.yaml
+++ b/charts/redis-ha/templates/redis-haproxy-serviceaccount.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ template "redis-ha.serviceAccountName" . }}-haproxy
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Release.Namespace | quote }}
   labels:
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
