--- a/charts/redis-ha/templates/redis-haproxy-servicemonitor.yaml
+++ b/charts/redis-ha/templates/redis-haproxy-servicemonitor.yaml
@@ -6,9 +6,9 @@ metadata:
   labels: {{ toYaml . | nindent 4}}
 {{- end }}
   name: {{ template "redis-ha.fullname" . }}-haproxy
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Release.Namespace | quote }}
 {{- if .Values.haproxy.metrics.serviceMonitor.namespace }}
-  namespace: {{ .Values.haproxy.metrics.serviceMonitor.namespace }}
+  namespace: {{ .Values.haproxy.metrics.serviceMonitor.namespace | quote }}
 {{- end }}
 spec:
   endpoints:
@@ -25,7 +25,7 @@ spec:
   jobLabel: {{ template "redis-ha.fullname" . }}-haproxy
   namespaceSelector:
     matchNames:
-    - {{ .Release.Namespace }}
+    - {{ .Release.Namespace | quote }}
   selector:
     matchLabels:
       app: {{ template "redis-ha.name" . }}
