--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -111,7 +111,7 @@ haproxy:
       # When set true then use a ServiceMonitor to configure scraping
       enabled: false
       # Set the namespace the ServiceMonitor should be deployed
-      # namespace: monitoring
+      # namespace: "monitoring"
       # Set how frequently Prometheus should scrape
       # interval: 30s
       # Set path to redis-exporter telemtery-path
@@ -446,7 +446,7 @@ exporter:
     # When set true then use a ServiceMonitor to configure scraping
     enabled: false
     # Set the namespace the ServiceMonitor should be deployed
-    # namespace: monitoring
+    # namespace: "monitoring"
     # Set how frequently Prometheus should scrape
     # interval: 30s
     # Set path to redis-exporter telemtery-path
