--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -264,6 +264,9 @@ redis:
 sentinel:
   port: 26379
 
+  ## Configure the 'bind' directive to bind to a list of network interfaces
+  # bind: 0.0.0.0
+
   ## Configures sentinel with tls-port parameter
   # tlsPort: 26385
 
