[GIV-3881] Allow specifying additional containers and init containers

--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -550,3 +550,10 @@ restore:
   ssh:
     source: false
     key: ""
+
+additionalInitContainers: []
+#  - name: additionalInit
+#    image: alpine
+additionalContainers: []
+#  - name: additional
+#    image: alpine
