--- a/charts/redis-ha/templates/redis-ha-statefulset.yaml
+++ b/charts/redis-ha/templates/redis-ha-statefulset.yaml
@@ -227,6 +227,9 @@ spec:
         - name: data
           mountPath: /data
 {{- end }}
+{{- if .Values.additionalInitContainers }}
+{{- toYaml .Values.additionalInitContainers | nindent 6 }}
+{{- end }}
       containers:
       - name: redis
         image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
@@ -432,6 +435,9 @@ spec:
             name: tls-certs
           {{- end }}
 {{- end }}
+{{- if .Values.additionalContainers }}
+{{- toYaml .Values.additionalContainers | nindent 6 }}
+{{- end -}}
 {{- if .Values.priorityClassName }}
       priorityClassName: {{ .Values.priorityClassName }}
 {{- end }}
