--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -557,3 +557,6 @@ additionalInitContainers: []
 additionalContainers: []
 #  - name: additional
 #    image: alpine
+additionalVolumes: []
+#  - name: empty
+#    emptyDir: {}
