--- a/charts/redis-ha/templates/redis-ha-statefulset.yaml
+++ b/charts/redis-ha/templates/redis-ha-statefulset.yaml
@@ -139,7 +139,7 @@ spec:
 {{- range $i := until $replicas }}
         - name: SENTINEL_ID_{{ $i }}
           value: {{ printf "%s\n%s\nindex: %d" (include "redis-ha.name" $) ($.Release.Name) $i | sha256sum | trunc 40 }}
-{{ end -}}
+{{- end }}
 {{- if .Values.auth }}
         - name: AUTH
           valueFrom:
@@ -304,8 +304,9 @@ spec:
           - redis-sentinel
         args:
           - /data/conf/sentinel.conf
-{{- if .Values.auth }}
+{{- if or .Values.auth .Values.sentinel.auth}}
         env:
+  {{- if .Values.auth }}
         - name: AUTH
           valueFrom:
             secretKeyRef:
@@ -315,8 +316,8 @@ spec:
               name: {{ template "redis-ha.fullname" . }}
             {{- end }}
               key: {{ .Values.authKey }}
-{{- end }}
-{{- if .Values.sentinel.auth }}
+  {{- end }}
+  {{- if .Values.sentinel.auth }}
         - name: SENTINELAUTH
           valueFrom:
             secretKeyRef:
@@ -326,6 +327,7 @@ spec:
               name: {{ template "redis-ha.fullname" . }}-sentinel
             {{- end }}
               key: {{ .Values.sentinel.authKey }}
+  {{- end }}
 {{- end }}
         livenessProbe:
           initialDelaySeconds: {{ .Values.sentinel.livenessProbe.initialDelaySeconds }}
