--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,12 +17,23 @@ jobs:
     if: github.ref != 'refs/heads/master'
     steps:
     - name: Checkout
-      uses: actions/checkout@v1
+      uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
 
     - name: Shellcheck
       uses: ludeeus/action-shellcheck@0.1.0
 
-    - name: Setup chart-testing
+    - name: Set up Helm
+      uses: azure/setup-helm@v1
+      with:
+        version: v3.4.0
+
+    - uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+
+    - name: Set up chart-testing
       uses: helm/chart-testing-action@v2.0.1
 
     - name: Run chart-testing (list-changed)
@@ -33,14 +44,15 @@ jobs:
           echo "::set-output name=changed::true"
         fi
 
-    - name: Install kind
-      uses: helm/kind-action@v1.0.0
+    - name: Create kind cluster
+      uses: helm/kind-action@v1.2.0
+      if: steps.list-changed.outputs.changed == 'true'
       with:
         node_image: "kindest/node:${{ matrix.kubernetesVersion }}"
         config: .ci/kind-config.yaml
-        install_local_path_provisioner: true
 
     - name: Verify kind
+      if: steps.list-changed.outputs.changed == 'true'
       run: |
         kubectl cluster-info
         kubectl get nodes -o wide
