[chart/redis-ha] Allow specifying additional containers and init containers (#131)
* [GIV-3881] Allow specifying additional containers and init containers

* [GIV-3881] Allow mounting additional volumes

* Use word extra instead of additional

* Add extraVolumeMounts to redis and sentinel, bump chart patch version

* Fix tests

Co-authored-by: Swav Swiac <swav.swiac@givergy.com>

--- a/charts/redis-ha/templates/redis-ha-statefulset.yaml
+++ b/charts/redis-ha/templates/redis-ha-statefulset.yaml
@@ -227,6 +227,9 @@ spec:
         - name: data
           mountPath: /data
 {{- end }}
+{{- if .Values.extraInitContainers }}
+{{- toYaml .Values.extraInitContainers | nindent 6 }}
+{{- end }}
       containers:
       - name: redis
         image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
@@ -289,6 +292,9 @@ spec:
         {{- end}}
         - mountPath: /health
           name: health
+{{- if .Values.redis.extraVolumeMounts }}
+{{- toYaml .Values.redis.extraVolumeMounts | nindent 8 }}
+{{- end }}
         lifecycle:
 {{ toYaml .Values.redis.lifecycle | indent 10 }}
       - name: sentinel
@@ -363,6 +369,9 @@ spec:
         {{- end }}
         - mountPath: /health
           name: health
+{{- if .Values.sentinel.extraVolumeMounts }}
+{{- toYaml .Values.sentinel.extraVolumeMounts | nindent 8 }}
+{{- end }}
         lifecycle:
 {{ toYaml .Values.sentinel.lifecycle | indent 10 }}
 {{- if .Values.exporter.enabled }}
@@ -432,6 +441,9 @@ spec:
             name: tls-certs
           {{- end }}
 {{- end }}
+{{- if .Values.extraContainers }}
+{{- toYaml .Values.extraContainers | nindent 6 }}
+{{- end -}}
 {{- if .Values.priorityClassName }}
       priorityClassName: {{ .Values.priorityClassName }}
 {{- end }}
@@ -465,6 +477,9 @@ spec:
         configMap:
           name: {{ template "redis-ha.fullname" . }}-health-configmap
           defaultMode: 0755
+{{- if .Values.extraVolumes }}
+{{- toYaml .Values.extraVolumes | nindent 6 }}
+{{- end -}}
 {{- if .Values.persistentVolume.enabled }}
   volumeClaimTemplates:
   - metadata:
