--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -260,6 +260,11 @@ redis:
   updateStrategy:
     type: RollingUpdate
 
+  ## additional volumeMounts for Redis container
+  extraVolumeMounts: []
+  #  - name: empty
+  #    mountPath: /empty
+
 ## Sentinel specific configuration options
 sentinel:
   port: 26379
@@ -330,6 +335,11 @@ sentinel:
   ## Container lifecycle hooks
   ## Ref: https://kubernetes.io/docs/concepts/containers/container-lifecycle-hooks/
   lifecycle: {}
+
+  ## additional volumeMounts for Sentinel container
+  extraVolumeMounts: []
+  #  - name: empty
+  #    mountPath: /empty
 
 securityContext:
   runAsUser: 1000
@@ -550,3 +560,13 @@ restore:
   ssh:
     source: false
     key: ""
+
+extraInitContainers: []
+#  - name: extraInit
+#    image: alpine
+extraContainers: []
+#  - name: extra
+#    image: alpine
+extraVolumes: []
+#  - name: empty
+#    emptyDir: {}
