--- a/charts/redis-ha/templates/redis-ha-statefulset.yaml
+++ b/charts/redis-ha/templates/redis-ha-statefulset.yaml
@@ -190,7 +190,11 @@ spec:
            && mv -v /data/dump.rdb_ /data/dump.rdb"
         envFrom:
         - secretRef:
+          {{- if .Values.restore.existingSecret }}
+            name: {{ .Values.existingSecret }}
+          {{- else }}
             name: {{ include "redis-ha.fullname" . }}-secret
+          {{- end }}
         volumeMounts:
         - name: data
           mountPath: /data
@@ -222,7 +226,11 @@ spec:
           runAsUser: 0
         envFrom:
         - secretRef:
+          {{- if .Values.restore.existingSecret }}
+            name: {{ .Values.existingSecret }}
+          {{- else }}
             name: {{ include "redis-ha.fullname" . }}-secret
+          {{- end }}
         volumeMounts:
         - name: data
           mountPath: /data
