Add additional labels
Signed-off-by: Joseph Heyburn <jdheyburn@gmail.com>

--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -591,3 +591,6 @@ extraContainers: []
 extraVolumes: []
 #  - name: empty
 #    emptyDir: {}
+
+# Labels added here are applied to all created resources
+additionalLabels: []
