--- a/charts/redis-ha/templates/redis-ha-statefulset.yaml
+++ b/charts/redis-ha/templates/redis-ha-statefulset.yaml
@@ -8,6 +8,9 @@ metadata:
   namespace: {{ .Release.Namespace | quote }}
   labels:
     {{ template "redis-ha.fullname" . }}: replica
+    {{- range $key, $value := .Values.additionalLabels }}
+    {{ $key }}: {{ $value | quote }}
+    {{- end }}
 {{ include "labels.standard" . | indent 4 }}
   annotations:
 {{ toYaml .Values.redis.annotations | indent 4 }}
@@ -39,6 +42,9 @@ spec:
         {{ template "redis-ha.fullname" . }}: replica
         {{- range $key, $value := .Values.labels }}
         {{ $key }}: {{ $value | toString }}
+        {{- end }}
+        {{- range $key, $value := .Values.additionalLabels }}
+        {{ $key }}: {{ $value | quote }}
         {{- end }}
     spec:
       {{- if .Values.redis.terminationGracePeriodSeconds }}
