Add additional labels
Signed-off-by: Joseph Heyburn <jdheyburn@gmail.com>

--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -593,4 +593,4 @@ extraVolumes: []
 #    emptyDir: {}
 
 # Labels added here are applied to all created resources
-additionalLabels: []
+additionalLabels: {}
