--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -54,6 +54,14 @@ serviceAccount:
 ## Recommend for externally exposed Redis clusters.
 ## ref: https://cbonte.github.io/haproxy-dconv/1.9/intro.html
 haproxy:
+  servicePort: 6379
+  containerPort: 6379
+  ## Enable TLS termination on HAproxy, This will create a volume mount
+  tls:
+    enabled: false
+    secretName: ""
+    keyName:
+    certMountPath: /tmp/
   enabled: false
   # Enable if you want a dedicated port in haproxy for redis-slaves
   readOnly:
