--- a/charts/redis-ha/templates/redis-ha-statefulset.yaml
+++ b/charts/redis-ha/templates/redis-ha-statefulset.yaml
@@ -8,7 +8,7 @@ metadata:
   namespace: {{ .Release.Namespace | quote }}
   labels:
     {{ template "redis-ha.fullname" . }}: replica
-    {{- range $key, $value := .Values.additionalLabels }}
+    {{- range $key, $value := .Values.extraLabels }}
     {{ $key }}: {{ $value | quote }}
     {{- end }}
 {{ include "labels.standard" . | indent 4 }}
@@ -43,7 +43,7 @@ spec:
         {{- range $key, $value := .Values.labels }}
         {{ $key }}: {{ $value | toString }}
         {{- end }}
-        {{- range $key, $value := .Values.additionalLabels }}
+        {{- range $key, $value := .Values.extraLabels }}
         {{ $key }}: {{ $value | quote }}
         {{- end }}
     spec:
