[charts/redis-ha] Added split brain detection algorithm description and
parameterised the check interval

--- a/charts/redis-ha/values.yaml
+++ b/charts/redis-ha/values.yaml
@@ -643,3 +643,6 @@ networkPolicy:
 
   ## user can define egress rules too, uses the same structure as ingressRules
   egressRules: []
+
+split_brain_detection:
+  interval: 60
