--- a/charts/redis-ha/templates/redis-ha-psp.yaml
+++ b/charts/redis-ha/templates/redis-ha-psp.yaml
@@ -5,6 +5,9 @@ metadata:
   name: {{ template "redis-ha.fullname" . }}
   labels:
 {{ include "labels.standard" . | indent 4 }}
+    {{- range $key, $value := .Values.extraLabels }}
+    {{ $key }}: {{ $value | quote }}
+    {{- end }}
 spec:
   allowPrivilegeEscalation: false
 {{- if .Values.securityContext.sysctls }}
