--- a/charts/redis-ha/templates/redis-ha-servicemonitor.yaml
+++ b/charts/redis-ha/templates/redis-ha-servicemonitor.yaml
@@ -11,6 +11,9 @@ metadata:
 {{- if .Values.exporter.serviceMonitor.namespace }}
   namespace: {{ .Values.exporter.serviceMonitor.namespace | quote }}
 {{- end }}
+  {{- range $key, $value := .Values.extraLabels }}
+  {{ $key }}: {{ $value | quote }}
+  {{- end }}
 spec:
   endpoints:
   - targetPort: {{ .Values.exporter.port }}
