--- a/charts/redis-ha/templates/redis-haproxy-pdb.yaml
+++ b/charts/redis-ha/templates/redis-haproxy-pdb.yaml
@@ -6,6 +6,9 @@ metadata:
   namespace: {{ .Release.Namespace | quote }}
   labels:
 {{ include "labels.standard" . | indent 4 }}
+    {{- range $key, $value := .Values.extraLabels }}
+    {{ $key }}: {{ $value | quote }}
+    {{- end }}
 spec:
   selector:
     matchLabels:
