--- a/charts/redis-ha/templates/redis-haproxy-role.yaml
+++ b/charts/redis-ha/templates/redis-haproxy-role.yaml
@@ -8,6 +8,9 @@ metadata:
   labels:
 {{ include "labels.standard" . | indent 4 }}
     component: {{ template "redis-ha.fullname" . }}-haproxy
+    {{- range $key, $value := .Values.extraLabels }}
+    {{ $key }}: {{ $value | quote }}
+    {{- end }}
 rules:
 - apiGroups:
     - ""
