--- a/charts/redis-ha/templates/sentinel-auth-secret.yaml
+++ b/charts/redis-ha/templates/sentinel-auth-secret.yaml
@@ -6,6 +6,9 @@ metadata:
   namespace: {{ .Release.Namespace | quote }}
   labels:
 {{ include "labels.standard" . | indent 4 }}
+    {{- range $key, $value := .Values.extraLabels }}
+    {{ $key }}: {{ $value | quote }}
+    {{- end }}
 type: Opaque
 data:
   {{ .Values.sentinel.authKey }}: {{ .Values.sentinel.password | b64enc | quote }}
