--- a/charts/redis-ha/templates/redis-haproxy-deployment.yaml
+++ b/charts/redis-ha/templates/redis-haproxy-deployment.yaml
@@ -95,9 +95,9 @@ spec:
       {{- end }}
       securityContext:
 {{ toYaml .Values.haproxy.securityContext | indent 8 }}
+      serviceAccount: {{ .Values.haproxy.serviceAccountName }}
       containers:
       - name: haproxy
-        serviceAccountName: {{ .Values.haproxy.serviceAccountName }}
         image: {{ .Values.haproxy.image.repository }}:{{ .Values.haproxy.image.tag }}
         imagePullPolicy: {{ .Values.haproxy.image.pullPolicy }}
     {{- if or .Values.auth .Values.sentinel.auth}}
