Fixes for non scrapingMode

--- a/charts/grafana-agent/templates/configmap.yaml
+++ b/charts/grafana-agent/templates/configmap.yaml
@@ -34,7 +34,7 @@ data:
       {{- end }}
     {{ if not .Values.scrapingServiceMode.enabled -}}
       configs:
-      - {{- $prometheusConfigs | indent 8 }}
+      {{- $prometheusConfigs | indent 6 }}
     {{- end }}
     {{- end }}
     tempo: 
